--- a/web/src/index.css
+++ b/web/src/index.css
@@ -12,6 +12,13 @@ code {
     monospace;
 }
 
+
+.footer{
+  background-color: #111;
+  height: 100px;
+  width: 200%;
+}
+
 .navBar{
   background-color: tan;
 
@@ -26,10 +33,24 @@ width: 100%;
 
 
 }
+
+
+h1.headerText{
+
+  position: absolute;
+  left: 33%;
+  top: 19%;
+
+}
 .navBack{
   background-color: aqua;
  
 
+
+}
+.padding{
+
+ /* padding: 24px,3px,50px,10px; */
 }
 
 ul {
@@ -58,98 +79,46 @@ li a:hover {
 }
 
 
+.slide-container {
+  width: 70%;
+  margin: auto; }
 
-* {box-sizing:border-box}
+h3 {
+  text-align: center; }
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+.each-slide > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
+  height: 300px;
 }
 
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
+.each-slide span {
+  padding: 20px;
+  font-size: 20px;
+  background: #efefef;
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+.each-fade {
+  display: flex;
 }
 
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+.each-fade .image-container {
+  width: 75%;
+  overflow: hidden;
 }
 
-.active, .dot:hover {
-  background-color: #717171;
+.each-fade .image-container img {
+  width: 100%;
 }
 
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+.each-fade h2 {
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  background: #adceed;
 }
