--- a/webv2/src/styles.css
+++ b/webv2/src/styles.css
@@ -48,10 +48,7 @@ h1.headerText{
 
 
 }
-.padding{
 
- /* padding: 24px,3px,50px,10px; */
-}
 
 ul {
   list-style-type: none;
@@ -121,4 +118,10 @@ h3 {
   align-items: center;
   margin: 0;
   background: #adceed;
+}
+
+.lineUp{
+
+
+  display: inline;
 }
