Added Large Amount of linting

--- a/webv3/src/styles.css
+++ b/webv3/src/styles.css
@@ -1,23 +1,23 @@
-/*===========================Page===============================*/
+/* ===========================Page=============================== */
 .pageStyling {
   background-color: #bfbfbf;
-  color: #000000;
+  color: #000;
   font-family: "Times New Roman", Times, serif;
-  padding: 0px;
+  padding: 1px;
 }
 @media only screen and (max-width: 250px) {
   .pageStyling {
     background-color: #bfbfbf;
-    color: #000000;
+    color: #000;
     font-family: "Times New Roman", Times, serif;
-    padding: 0px;
+    padding: 1px;
     margin: 0%;
   }
 }
 
-/*===========================Page===============================*/
+/* ===========================Page=============================== */
 
-/*===========================Header===============================*/
+/* ===========================Header============================= */
 .header {
   height: 300px;
   width: 100%;
@@ -25,7 +25,7 @@
 
 .headerStyling {
   background-color: #909090;
-  padding: 0px;
+  padding: 1px;
   text-align: center;
 }
 
@@ -43,8 +43,9 @@ h1.headerStyling {
   }
 }
 
-/*===========================Header===============================*/
-/*===========================Reactive===============================*/
+/* ===========================Header=============================== */
+
+/* ===========================Reactive=============================== */
 @media only screen and (max-width: 600px) {
   .mobile {
     display: none;
@@ -55,9 +56,10 @@ h1.headerStyling {
     display: none;
   }
 }
-/*===========================Reactive===============================*/
 
-/*===========================Nav===============================*/
+/* ===========================Reactive=============================== */
+
+/* ===========================Nav=============================== */
 .navCol {
   /* background-color: #212121; */
   padding: 10px;
@@ -80,8 +82,9 @@ h1.headerStyling {
   margin: 0%;
 }
 
-/*===========================Nav===============================*/
-/*===========================Menu Item===============================*/
+/* ===========================Nav=============================== */
+
+/* ===========================Menu Item=============================== */
 
 .menuItem {
   margin-top: 4px;
@@ -126,9 +129,9 @@ h1.headerStyling {
   max-height: 200px;
 }
 
-/*===========================Menu Item===============================*/
+/* ===========================Menu Item=============================== */
 
-/*===========================Footer===============================*/
+/* ===========================Footer=============================== */
 
 .footer {
   clear: both;
@@ -137,11 +140,12 @@ h1.headerStyling {
   text-align: center;
   height: 100px;
   width: 100%;
-  margin-bottom: 0px;
+  margin-bottom: 1px;
 }
-/*===========================Footer===============================*/
 
-/*===========================FAQ===============================*/
+/* ===========================Footer=============================== */
+
+/* ===========================FAQ=============================== */
 .faqBox {
   margin-bottom: 10px;
   background-color: #adceed;
@@ -153,9 +157,9 @@ h1.headerStyling {
   text-align: center;
 }
 
-/*===========================FAQ===============================*/
+/* ===========================FAQ=============================== */
 
-/* ==========================Slide CSS=========================*/
+/* ==========================Slide CSS========================= */
 
 .slide-container {
   width: 70%;
@@ -210,22 +214,23 @@ span.lineUp {
   float: top;
 }
 
-/* ==========================Slide CSS=========================*/
+/* ==========================Slide CSS========================= */
 
-/* ==========================Forms=========================*/
+/* ==========================Forms========================= */
 
 .formTitle {
-  color: BFBFBF;
+  color: bfbfbf;
   background-color: #adceed;
   font-size: large;
 }
 
 .formBox {
   background-color: #909090;
-  color: BFBFBF;
+  color: bfbfbf;
 }
 
-/* ==========================Forms=========================*/
+/* ==========================Forms========================= */
+
 /* 
 
 .contentSpacing{
