--- a/webv3/src/components/pages/parts/forms/forms.css
+++ b/webv3/src/components/pages/parts/forms/forms.css
@@ -1,11 +1,11 @@
 .formTitle {
-  color: BFBFBF;
+  color: bfbfbf;
   background-color: adceed;
 }
 
 .formBox {
   background-color: 909090;
-  color: BFBFBF;
+  color: bfbfbf;
 }
 
 /* NOT IN USE */
